--- a/client/static/css/cart.css
+++ b/client/static/css/cart.css
@@ -39,13 +39,15 @@ textarea {
     color: #757575;
 }
 
-.site-header .header-logo {
+
+/* .site-header .header-logo {
     float: left;
     width: 62px;
     margin-top: 22px;
-}
+} */
 
 .site-mini-header .header-logo {
+    float: left;
     width: 141px;
     margin-top: 26px;
 }
@@ -992,17 +994,17 @@ textarea {
 }
 
 .item-list li .text {
-    position: absolute;
+    /* position: absolute; */
     bottom: -35px;
     left: 0;
-    padding: 5px 15px;
+    padding: 5px 10px;
     line-height: 18px;
-    height: 18px;
+    /* height: 18px; */
     box-shadow: 0 0 7px #eee;
     border: 1px solid #edd28b;
     background: #fffdee;
     white-space: nowrap;
-    display: none;
+    /* display: none; */
 }
 
 .item-list li .text i {
