--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -353,9 +353,9 @@ a:hover {
     width: 100%;
     padding-left: 0;
     padding-right: 0;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box
 }
 
 .btn-primary {
