--- a/client/static/css/goods.css
+++ b/client/static/css/goods.css
@@ -82,7 +82,7 @@
 }
 
 .goods-detail .goods-small-pic li {
-    height: 60px;
+    /* height: 60px; */
     cursor: pointer;
     zoom: 1;
     padding: 4px;
@@ -396,7 +396,7 @@
     float: left;
     display: block;
     width: 66px;
-    height: 14px;
+    height: 30px;
     padding: 8px 0;
     line-height: 14px;
     border: none;
